Added Firebase Tools And Functions For Emulator

--- a/backend-repo/.env.expire.20250331
+++ b/backend-repo/.env.expire.20250331
@@ -1,3 +1,4 @@
+NODE_ENV=development
 FIREBASE_API_KEY=AIzaSyDXCVcVqwZ3nCHuk5S0ksGlYAWyYfh_GkU
 FIREBASE_AUTH_DOMAIN=ebuddy-technical-test-39d4a.firebaseapp.com
 FIREBASE_PROJECT_ID=ebuddy-technical-test-39d4a
