--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2",
+    "firebase-tools": "^13.33.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
