Added Fully Functional Of Firebase Functions With Build And Firebase Emulator

--- a/backend-repo/functions/tsconfig.json
+++ b/backend-repo/functions/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "../",
     "module": "NodeNext",
     "esModuleInterop": true,
     "moduleResolution": "nodenext",
