--- a/backend-repo/.env.expire.20250331
+++ b/backend-repo/.env.expire.20250331
@@ -1,7 +1,7 @@
 NODE_ENV=development
-FIREBASE_API_KEY=AIzaSyDXCVcVqwZ3nCHuk5S0ksGlYAWyYfh_GkU
-FIREBASE_AUTH_DOMAIN=ebuddy-technical-test-39d4a.firebaseapp.com
-FIREBASE_PROJECT_ID=ebuddy-technical-test-39d4a
-FIREBASE_STORAGE_BUCKET=ebuddy-technical-test-39d4a.firebasestorage.app
-FIREBASE_MESSAGING_SENDER_ID=304434824612
-FIREBASE_APP_ID=1:304434824612:web:0457261df21b488fb42d31
+EXPRESS_FIREBASE_API_KEY=AIzaSyDXCVcVqwZ3nCHuk5S0ksGlYAWyYfh_GkU
+EXPRESS_FIREBASE_AUTH_DOMAIN=ebuddy-technical-test-39d4a.firebaseapp.com
+EXPRESS_FIREBASE_PROJECT_ID=ebuddy-technical-test-39d4a
+EXPRESS_FIREBASE_STORAGE_BUCKET=ebuddy-technical-test-39d4a.firebasestorage.app
+EXPRESS_FIREBASE_MESSAGING_SENDER_ID=304434824612
+EXPRESS_FIREBASE_APP_ID=1:304434824612:web:0457261df21b488fb42d31
