--- a/apps/backend-repo/package.json
+++ b/apps/backend-repo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./dist/server.js",
+    "dev:emulator": "cd functions && npm run build && firebase emulators:start",
     "dev": "nodemon --ext ts --exec ts-node ./server.ts",
     "test": ""
   },
