--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "dev": "turbo run dev",
     "dev:emulator": "turbo run dev:emulator",
@@ -10,6 +11,7 @@
   ],
   "packageManager": "npm@10.2.4",
   "dependencies": {
+    "firebase": "^11.4.0",
     "turbo": "^2.4.4"
   }
 }
